# gstreamerTest

./: CMakeLists.txt  README.md  main.cpp
